tests/sksl/errors/golden/InterfaceBlockWithNoMembers.glsl
### Compilation failed:

error: 1: interface block 'testBlock' must contain at least one member
1 error
